--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 beautifulsoup4==4.10.0
+boto3==1.20.6
+botocore==1.23.6
 certifi==2021.10.8
 charset-normalizer==2.0.7
 idna==3.3
+jmespath==0.10.0
 numpy==1.21.3
 pandas==1.3.4
 python-dateutil==2.8.2
 pytz==2021.3
 requests==2.26.0
+s3transfer==0.5.0
 six==1.16.0
 soupsieve==2.2.1
 urllib3==1.26.7
