--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 beautifulsoup4==4.10.0
 boto3==1.20.20
+boto3-stubs==1.20.21
 botocore==1.23.20
+botocore-stubs==1.23.21
 certifi==2021.10.8
 charset-normalizer==2.0.7
 idna==3.3
 jmespath==0.10.0
+mypy-boto3-ec2==1.20.18
+mypy-boto3-redshift==1.20.12
+mypy-boto3-s3==1.20.17
 numpy==1.21.3
 pandas==1.3.4
 python-dateutil==2.8.2
