--- a/chinese-news-aggregator/etl/scraper/scrapy.cfg
+++ b/chinese-news-aggregator/etl/scraper/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = chinese_news_scraper.settings
+default = scraper.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = chinese_news_scraper
+project = scraper
