--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 attrs==21.4.0
 Automat==20.2.0
 beautifulsoup4==4.10.0
-boto3==1.20.54
-boto3-stubs==1.20.53
-botocore==1.23.54
-botocore-stubs==1.23.53
+boto3==1.20.20
+boto3-stubs==1.20.26
+botocore==1.23.20
+botocore-stubs==1.23.26
 certifi==2021.10.8
 cffi==1.15.0
-charset-normalizer==2.0.11
+charset-normalizer==2.0.7
 constantly==15.1.0
 cryptography==36.0.1
 cssselect==1.1.0
@@ -21,11 +21,11 @@ itemadapter==0.4.0
 itemloaders==1.0.4
 jmespath==0.10.0
 lxml==4.7.1
-mypy-boto3-ec2==1.20.49
-mypy-boto3-redshift==1.20.49
-mypy-boto3-s3==1.20.49
-numpy==1.22.2
-pandas==1.4.0
+mypy-boto3-ec2==1.20.23
+mypy-boto3-redshift==1.20.25
+mypy-boto3-s3==1.20.17
+numpy==1.21.3
+pandas==1.3.4
 parsel==1.6.0
 priority==1.3.0
 Protego==0.1.16
@@ -37,14 +37,15 @@ pyOpenSSL==22.0.0
 python-dateutil==2.8.2
 pytz==2021.3
 queuelib==1.6.2
-requests==2.27.1
-s3transfer==0.5.1
+requests==2.26.0
+s3transfer==0.5.0
 Scrapy==2.5.1
 service-identity==21.1.0
 six==1.16.0
-soupsieve==2.3.1
+soupsieve==2.2.1
 Twisted==22.1.0
-typing-extensions==4.0.1
-urllib3==1.26.8
+twisted-iocpsupport==1.0.2
+typing_extensions==4.0.1
+urllib3==1.26.7
 w3lib==1.22.0
 zope.interface==5.4.0
