--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,81 @@
 attrs==21.4.0
 Automat==20.2.0
-beautifulsoup4==4.10.0
-boto3==1.20.20
-boto3-stubs==1.20.26
+Babel==2.5.1
+boto3==1.21.17
 botocore==1.23.20
-botocore-stubs==1.23.26
 certifi==2021.10.8
 cffi==1.15.0
-charset-normalizer==2.0.7
+chardet==3.0.4
+charset-normalizer==2.0.12
+cloud-init==20.3
+configobj==5.0.6
 constantly==15.1.0
 cryptography==36.0.1
 cssselect==1.1.0
+dbus-python==1.2.4
+decorator==4.2.1
+ethtool==0.14
+file-magic==0.3.0
+filelock==3.4.1
+gpg==1.13.1
 h2==3.2.0
 hpack==3.0.0
 hyperframe==5.2.0
 hyperlink==21.0.0
-idna==3.3
+idna==2.5
 incremental==21.3.0
+iniparse==0.4
 itemadapter==0.4.0
 itemloaders==1.0.4
+Jinja2==2.10.1
 jmespath==0.10.0
-lxml==4.7.1
-mypy-boto3-ec2==1.20.23
-mypy-boto3-redshift==1.20.25
-mypy-boto3-s3==1.20.17
-numpy==1.21.3
-pandas==1.3.4
+jsonpatch==1.21
+jsonpointer==1.10
+jsonschema==2.6.0
+lxml==4.8.0
+MarkupSafe==0.23
+numpy==1.19.5
+oauthlib==2.1.0
+pandas==1.1.5
 parsel==1.6.0
+perf==0.1
+ply==3.9
+prettytable==0.7.2
 priority==1.3.0
 Protego==0.1.16
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
 PyDispatcher==2.0.5
+PyGObject==3.28.3
+pyinotify==0.9.6
+PyJWT==1.6.1
 pyOpenSSL==22.0.0
+pyserial==3.1.1
+PySocks==1.6.8
 python-dateutil==2.8.2
+python-dmidecode==3.12.2
+python-linux-procfs==0.6.3
 pytz==2021.3
+pyudev==0.21.0
+PyYAML==3.12
 queuelib==1.6.2
 requests==2.26.0
+requests-file==1.5.1
+rpm==4.14.3
 s3transfer==0.5.0
+schedutils==0.6
 Scrapy==2.5.1
+selinux==2.9
+sepolicy==1.1
 service-identity==21.1.0
-six==1.16.0
-soupsieve==2.2.1
-Twisted==22.1.0
-twisted-iocpsupport==1.0.2
-typing_extensions==4.0.1
-urllib3==1.26.7
+setools==4.3.0
+six==1.11.0
+subscription-manager==1.28.13
+syspurpose==1.28.13
+tldextract==3.1.2
+Twisted==22.2.0
+typing_extensions==4.1.1
+urllib3==1.26.8
 w3lib==1.22.0
 zope.interface==5.4.0
